hackathon-coding-main/k8s/patient-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
